objects/adapps__OptimizerPlus_Inactive_WF_Rules_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Inactive_Workflow_Rules__c</fullName>
        <label>Inactive Workflow Rules</label>
        <referenceTo>adapps__OptimizerPlus_Inactive_WF_Rules__c</referenceTo>
        <relationshipLabel>Inactive Workflow Rules Items</relationshipLabel>
        <relationshipName>Inactive_Workflow_Rules_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>adapps__Workflow_Rule_Name__c</fullName>
        <label>Workflow Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inactive Workflow Rules Item</label>
    <nameField>
        <label>Inactive Workflow Rules Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inactive Workflow Rules Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>